--- a/aports/main/postmarketos-mkinitfs/init.sh.in
+++ b/aports/main/postmarketos-mkinitfs/init.sh.in
@@ -1,5 +1,6 @@
 #!/bin/sh
 . ./init_functions.sh
+. /etc/deviceinfo
 
 export PATH=/usr/bin:/bin:/usr/sbin:/sbin
 /bin/busybox --install -s
@@ -8,7 +9,7 @@ export PATH=/usr/bin:/bin:/usr/sbin:/sbin
 # Mount everything, set up logging, modules, mdev
 mount_proc_sys_dev
 setup_log
-[ -d /lib/modules ] && modprobe -a @MODULES@
+[ -d /lib/modules ] && modprobe -a "${deviceinfo_modules_initfs} ext4"
 setup_mdev
 mount_subpartitions
 
