--- a/aports/main/postmarketos-mkinitfs/init.sh.in
+++ b/aports/main/postmarketos-mkinitfs/init.sh.in
@@ -1,6 +1,7 @@
 #!/bin/sh
-. ./init_functions.sh
+# shellcheck disable=SC1091
 . /etc/deviceinfo
+. ./init_functions.sh
 
 export PATH=/usr/bin:/bin:/usr/sbin:/sbin
 /bin/busybox --install -s
