xf86-video-hwcomposer: update to latest git, change provided configs
* 30-modules-hybris.conf is added to override default 20-modules.conf
to load only needed modules.

* 40-hwcomposer.conf is removed to be provided by device-specific package,
for example to set proper rotation on Gemini PDA.

--- a/aports/hybris/glamor-hybris/APKBUILD
+++ b/aports/hybris/glamor-hybris/APKBUILD
@@ -8,8 +8,9 @@ arch="all"
 license="MIT"
 subpackages="$pkgname-doc $pkgname-dev"
 depends=
-makedepends="xorg-server-dev libxi-dev fontsproto randrproto
-	videoproto renderproto drihybrisproto drihybris-dev libepoxy-dev"
+makedepends="xorg-server-dev util-macros libxi-dev fontsproto randrproto
+	videoproto renderproto drihybrisproto drihybris-dev libepoxy-dev
+	libhybris-dev"
 
 source="$pkgname-$_commit.tar.gz::https://github.com/NotKit/glamor-hybris/archive/$_commit.tar.gz"
 
