--- a/aports/hybris/drihybris/APKBUILD
+++ b/aports/hybris/drihybris/APKBUILD
@@ -8,7 +8,8 @@ arch="all"
 license="MIT"
 subpackages="$pkgname-doc $pkgname-dev"
 depends=
-makedepends="xorg-server-dev util-macros libxi-dev drihybrisproto"
+makedepends="autoconf automake util-macros
+	xorg-server-dev libxi-dev drihybrisproto"
 
 source="$pkgname-$_commit.tar.gz::https://github.com/NotKit/drihybris/archive/$_commit.tar.gz"
 
