--- a/aports/hybris/drihybris/APKBUILD
+++ b/aports/hybris/drihybris/APKBUILD
@@ -8,7 +8,7 @@ arch="all"
 license="MIT"
 subpackages="$pkgname-doc $pkgname-dev"
 depends=
-makedepends="autoconf automake util-macros
+makedepends="autoconf automake libtool util-macros
 	xorg-server-dev libxi-dev drihybrisproto"
 
 source="$pkgname-$_commit.tar.gz::https://github.com/NotKit/drihybris/archive/$_commit.tar.gz"
